Refactor SecurityConfig for CORS and CSRF handling